Fix creation of backup directory